syntax = "proto3";

package dtmb.backend.v1;

option go_package = "github.com/microsoft/dtmb-go/protos/backend/v1;backend";
option csharp_namespace = "Microsoft.DTMB.Backend.Autogen.Grpc.v1";

import "google/protobuf/timestamp.proto";

message OrchestratorAction {
    uint64 sequence_number = 1 [json_name = "sequenceNumber"];
    google.protobuf.Timestamp timestamp = 2 [json_name = "timestamp"];
    bytes event_hash = 3 [json_name = "eventHash"];
    oneof orchestrator_action_type {
        ScheduleTaskAction schedule_task = 10 [json_name = "scheduleTask"];
        CreateSubOrchestrationAction create_sub_orchestration = 11 [json_name = "createSubOrchestration"];
        CreateTimerAction create_timer = 12 [json_name = "createTimer"];
        SendEventAction send_event = 13 [json_name = "sendEvent"];
        CompleteOrchestrationAction complete_orchestration = 14 [json_name = "completeOrchestration"];
        TerminateOrchestrationAction terminate_orchestration = 15 [json_name = "terminateOrchestration"];
    }
}

message ScheduleTaskAction {
    // TODO
}

message CreateSubOrchestrationAction {
    // TODO
}

message CreateTimerAction {
    // TODO
}

message SendEventAction {
    // TODO
}

message CompleteOrchestrationAction {
    // TODO
}

message TerminateOrchestrationAction {
    // TODO
}
